# reNut_linuxfixes

./: .gitignore  CMakeLists.txt  README.md  build-linux.sh  build-release.sh  renut.toml  renut_manifest.toml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/rexglue/renut/: RenutActivity.java
android/app/src/main/java/org/libsdl/app/: HIDDeviceManager.java  SDLActivity.java  SDLInputConnection.java
src/: main.cpp
src/renut_engine/: StopNSwap.cpp  hooks.cpp  renut_logging.h  rex_macros.h  sleep.h
src/renut_engine/fixes/: mullhwucrash.cpp  nullmemcpy.cpp
